force-app/main/default/objects/ffr__ReportingIntersection__c/ffr__ReportingIntersection__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingintersection</customHelpPage>
    <description>Represent a cross between a column calculation and a row calculation.</description>
    <label>Reporting Intersection</label>
    <nameField>
        <label>Intersection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Intersections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>