force-app/main/default/objects/ffr__ReportingIntersection__c/fields/ffr__CalculatedColumn__c.field-meta.xml
<CustomField>
    <fullName>ffr__CalculatedColumn__c</fullName>
    <label>Reporting Column Calculation</label>
    <referenceTo>ffr__ReportingCalculation__c</referenceTo>
    <relationshipLabel>Reporting Intersections</relationshipLabel>
    <relationshipName>ReportingIntersection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>