force-app/main/default/objects/ffr__ReportingIntersection__c/fields/ffr__CustomCalculationType__c.field-meta.xml
<CustomField>
    <fullName>ffr__CustomCalculationType__c</fullName>
    <label>Custom Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ffr__Apply__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Row Calculation</fullName>
                <default>true</default>
                <label>Row Calculation</label>
            </value>
            <value>
                <fullName>Column Calculation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>