force-app/main/default/objects/ffr__ReportingIntersection__c/fields/ffr__ParseTree__c.field-meta.xml
<CustomField>
    <fullName>ffr__ParseTree__c</fullName>
    <label>Parse Tree</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>