force-app/main/default/objects/ffr__ReportingIntersection__c/fields/ffr__RowKey__c.field-meta.xml
<CustomField>
    <fullName>ffr__RowKey__c</fullName>
    <label>Row Key</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R01</fullName>
            </value>
            <value>
                <fullName>R02</fullName>
            </value>
            <value>
                <fullName>R03</fullName>
            </value>
            <value>
                <fullName>R04</fullName>
            </value>
            <value>
                <fullName>R05</fullName>
            </value>
            <value>
                <fullName>R06</fullName>
            </value>
            <value>
                <fullName>R07</fullName>
            </value>
            <value>
                <fullName>R08</fullName>
            </value>
            <value>
                <fullName>R09</fullName>
            </value>
            <value>
                <fullName>R10</fullName>
            </value>
            <value>
                <fullName>R11</fullName>
            </value>
            <value>
                <fullName>R12</fullName>
            </value>
            <value>
                <fullName>R13</fullName>
            </value>
            <value>
                <fullName>R14</fullName>
            </value>
            <value>
                <fullName>R15</fullName>
            </value>
            <value>
                <fullName>R16</fullName>
            </value>
            <value>
                <fullName>R17</fullName>
            </value>
            <value>
                <fullName>R18</fullName>
            </value>
            <value>
                <fullName>R19</fullName>
            </value>
            <value>
                <fullName>R20</fullName>
            </value>
            <value>
                <fullName>R21</fullName>
            </value>
            <value>
                <fullName>R22</fullName>
            </value>
            <value>
                <fullName>R23</fullName>
            </value>
            <value>
                <fullName>R24</fullName>
            </value>
            <value>
                <fullName>R25</fullName>
            </value>
            <value>
                <fullName>R26</fullName>
            </value>
            <value>
                <fullName>R27</fullName>
            </value>
            <value>
                <fullName>R28</fullName>
            </value>
            <value>
                <fullName>R29</fullName>
            </value>
            <value>
                <fullName>R30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>