force-app/main/default/objects/ffr__ReportingIntersection__c/recordTypes/ffr__CalculatedColumnWithDataRangeTotal.recordType-meta.xml
<RecordType>
    <fullName>ffr__CalculatedColumnWithDataRangeTotal</fullName>
    <active>true</active>
    <description>Use this record type to add an intersection with a data range total calculation.</description>
    <label>Calculated Column with Data Range Total</label>
</RecordType>