force-app/main/default/objects/ffr__ReportingIntersection__c/recordTypes/ffr__CalculatedColumnWithRowCalculation.recordType-meta.xml
<RecordType>
    <fullName>ffr__CalculatedColumnWithRowCalculation</fullName>
    <active>true</active>
    <description>Use this record type to add an intersection with a row calculation.</description>
    <label>Calculated Column with Row Calculation</label>
</RecordType>