force-app/main/default/objects/ffr__ReportingIntersection__c/recordTypes/ffr__CalculatedColumnWithSubtotal.recordType-meta.xml
<RecordType>
    <fullName>ffr__CalculatedColumnWithSubtotal</fullName>
    <active>true</active>
    <description>Use this record type to add an intersection with a subtotal calculation.</description>
    <label>Calculated Column with Subtotal</label>
</RecordType>